# makermone_server

./: .gitattributes  .gitignore  Dockerfile  app.py  app_router.py  chat_server.py  check_key.py  hitl_approval_queue.json  hitl_dashboard.py  hybrid_scanner.py  main.py  makermone_data.txt  po_queue.json  pyproject.toml  render_server.py  render_worker.py  requirements.in  requirements.txt  run_dashboard.bat  scan_history.json  scanner.py  start_invisible.vbs  start_lo_daemon.bat  start_render_server.bat  test_server.py  uno_engine.py  uno_renderer.py  watchdog_daemon.py
assets/templates/: template_po.ods
templates/: dashboard_main.html  dashboard_v01.html  dashboard_v02.html
tests/: main_backup.py  security_scan.py  test.py  test_data.json
