[project]
name = "makermone-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cadquery>=2.7.0",
    "flask>=3.1.3",
    "google-genai>=1.73.1",
    "nlopt<2.10.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "watchdog>=6.0.0",
]
